Final functionality finished

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,3 +53,15 @@ h2 {
   font-weight: 100;
   color: rgb(48, 181, 199);
 }
+
+.product_name {
+  border-top: 1px solid #e8e8e8;
+  padding-top: 12px;
+  margin-bottom: 2px;
+  font-size: 18px;
+}
+
+.product_description {
+    margin: 0;
+    color: #30B5C7;
+}
